--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,6 @@
 
 @layer base {
   body {
-    @apply font-sans font-normal text-base;
+    @apply font-sans text-base font-normal text-gray-800;
   }
 }
